# score-analysis

./: .flake8  .gitignore  .readthedocs.yml  .snyk  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini  setup.cfg
.github/workflows/: publish.yml  tests.yml
data/: data.parquet
docs/: conf.py  index.rst
docs/content/: cm.rst  group_scores.rst  index.rst  metrics.rst  scores.rst  tools.rst  utils.rst
docs/content/concepts/: confidence_intervals.rst
docs/content/score_analysis/: metrics.rst  roc_curve.rst  scores.rst  tools.rst
notebooks/: 2023-12-25-presenation-roc-ci.ipynb  2023-12-26-macskassy-proper.ipynb  2023-12-28-label-noise.ipynb  2024-09-26-comparing-classifiers.ipynb  eer.ipynb  roc-ci-experiments.ipynb  roc-curve-with-ci.ipynb  showbias_tutorial.ipynb  tutorial.ipynb
score_analysis/: __init__.py  cm.py  embeddings.py  group_scores.py  metrics.py  one_to_n_scores.py  roc.py  roc_curve.py  scores.py  showbias.py  showbias_plotting.py  tools.py  utils.py
score_analysis/applications/: __init__.py  doc_fraud.py
score_analysis/experimental/: __init__.py  datasets.py  roc_ci.py
tests/: smoke_test.py  test_cm.py  test_embeddings.py  test_group_scores.py  test_metrics.py  test_one_to_n_matching.py  test_one_to_n_scores.py  test_roc.py  test_roc_curve.py  test_scores.py  test_showbias.py  test_tools.py  test_utils.py
tests/applications/: test_doc_fraud.py
tests/experimental/: test_datasets.py
