[tool.poetry]
name = "score-analysis"
version = "0.2.3"
description = "Library to evaluate models"
authors = [
    "Martins Bruveris <martins.bruveris@gmx.com>",
    "Marian Schneider <marian.schnei@gmail.com>",
    "Jochem Gietema <jochem@giete.ma>",
    "Simon Bozonnet <simon.bozonnet@gmail.com>"
]
readme = "README.md"
packages = [{include = "score_analysis"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "*"
pandas = "*"
scipy = "*"
tabulate = "*"

[tool.poetry.group.dev.dependencies]
bumpversion = "*"
pytest = "*"
pytest-cov = "*"
ruff = "*"
taskipy = "^1.13"

[tool.poetry.group.docs.dependencies]
enum-tools = "*"
sphinx = "^5.0.0"
sphinx-rtd-theme = "*"
sphinx-toolbox = "^3.0.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.jupyter.dependencies]
dataframe-image = "*"
jupyter = "*"
matplotlib = "*"
seaborn = "*"
scikit-learn = "*"
tqdm = "*"

[tool.poetry.group.jupyter]
optional = true

[tool.taskipy.tasks]
bumpversion = "poetry run bumpversion patch && git push && git push --tags"
check-style = { cmd = "ruff format --diff . && ruff check .", help = "Check style."}
format = { cmd = "ruff format . && ruff check --fix .", help = "Format code."}
build-docs = "sphinx-build docs docs/_build/html"
serve-docs = "sphinx-autobuild docs docs/_build/html --open-browser --watch=score_analysis/"

[tool.ruff]
target-version = "py312"
line-length = 88
lint = { select = ["E", "F", "I"] }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

