[project]
name = "score-analysis"
version = "0.3.0"
description = "Library to evaluate models"
authors = [
    { name = "Martins Bruveris", email = "martins.bruveris@gmx.at" },
    { name = "Marian Schneider", email = "marian.schnei@gmail.com" },
    { name = "Jochem Gietema", email = "jochem@giete.ma" },
    { name = "Simon Bozonnet", email = "simon.bozonnet@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.9,<3.15"

dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "tabulate",
]

[dependency-groups]
dev = [
    "bumpversion",
    "pytest",
    "pytest-cov",
    "ruff",
    "taskipy>=1.13"
]

docs = [
    "enum-tools",
    "sphinx~=5.0.0",
    "sphinx-rtd-theme~=2.0.0",
    "sphinx-toolbox>=3.0.0"
]

jupyter = [
    "dataframe-image",
    "jupyter",
    "matplotlib",
    "multiprocess",
    "seaborn",
    "scikit-learn",
    "tqdm"
]

[tool.taskipy.tasks]
bumpversion = "poetry run bumpversion patch && git push && git push --tags"
check-style = { cmd = "ruff format --diff . && ruff check .", help = "Check style."}
format = { cmd = "ruff format . && ruff check --fix .", help = "Format code."}
build-docs = "sphinx-build docs docs/_build/html"
serve-docs = "sphinx-autobuild docs docs/_build/html --open-browser --watch=score_analysis/"

[tool.ruff]
target-version = "py312"
line-length = 88
lint = { select = ["E", "F", "I"] }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
